# canopy-research

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  compose.dev.yml  compose.yml  docker-entrypoint.sh  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml  cleanup.yml  docker.yml
canopyresearch/: AGENTS.md  admin.py  asgi.py  conftest.py  context_processors.py  forms.py  middleware.py  models.py  research_urls.py  settings.py  tasks.py  test_basic.py  urls.py  views.py  wsgi.py
canopyresearch/management/commands/: ingest_due.py  label_clusters.py  seed.py  (+1 more)
canopyresearch/migrations/: 0001_initial.py  0002_refactor_document_source_many_to_many.py  0003_phase2_model_enhancements.py  0004_embeddings_and_clusters.py  0004_phase3_embeddings_and_clusters.py  0005_cluster_metrics.py  0006_document_scoring_fields.py  0007_workspace_search_terms.py  0008_populate_initial_search_terms.py  0009_alter_document_options_and_more.py  0010_workspace_ingestion_interval.py  0011_add_cluster_label.py  0012_document_summary.py
canopyresearch/services/: __init__.py  clustering.py  core.py  embeddings.py  extraction.py  ingestion.py  providers.py  source_discovery.py  summarization.py  term_extraction.py  utils.py
canopyresearch/tests/: __init__.py  conftest.py  fixtures.py  test_browser_sources.py  test_browser_workspace.py  test_clustering.py  test_core.py  test_embeddings.py  test_extraction.py  test_ingestion.py  test_middleware.py  test_models.py  test_phase3_tasks.py  test_providers.py  test_scoring.py  test_tasks.py  test_term_extraction.py  test_views.py
docs/: deployment.md  embeddings.md  hackernews-config.md  term_extraction.md
(+34 files in other folders)
