[project]
name = "canopy-research"
version = "0.1.0"
description = "Canopy Research is a Django-based application for managing and analyzing research data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.11",
    "django-tasks-db>=0.12.0",
    "django-unfold>=0.79.0",
    "feedparser>=6.0",
    "gunicorn>=23.0.0",
    "readability-lxml>=0.8",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "DJ", # django
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["canopyresearch"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "canopyresearch.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=canopyresearch",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["canopyresearch"]
